Cumulative commit